spacing fixed on all screens for search results of main landing screens.

--- a/src/app/features/ask-question/components/ask-question-page/ask-question-page.component.scss
+++ b/src/app/features/ask-question/components/ask-question-page/ask-question-page.component.scss
@@ -22,7 +22,7 @@
     }
   }
   .search-form {
-    padding: 0px 40px;
+    padding: 32px 40px;
     .search-field {
       form {
         width: 100%;
@@ -102,7 +102,7 @@
 }
 
 .search-result {
-  padding: 24px 40px 0;
+  padding: 0 40px 24px 40px;
 }
 .cursor {
   cursor: pointer;
