--- a/src/app/features/services/components/search-container/search-container.component.scss
+++ b/src/app/features/services/components/search-container/search-container.component.scss
@@ -134,7 +134,9 @@
 .search-list {
   box-shadow: 2px 5px 17px 4px rgba(193, 191, 191, 0.5);
 }
-
+.mt-32{
+  margin-top: 32px;
+}
 @media (min-width: 640px) {
   // .sm-pr-20 {
   //   padding-right: 20px;
